Added test static bitmaps and test animation. Also pre-loads SPI FIFO using new `buffer_pixels` callback.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ git = "https://github.com/thejpster/menu"
 
 [dependencies.vga-framebuffer]
 git = "https://github.com/thejpster/vga-framebuffer-rs"
+# path = "../vga-framebuffer-rs"
 
 [dependencies.embedded-hal]
 version = "0.1.1"
