--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,8 @@ panic = "abort"
 [dependencies]
 
 [dependencies.tm4c123x-hal]
-git = "https://github.com/thejpster/tm4c123x-hal"
+# git = "https://github.com/thejpster/tm4c123x-hal"
+path = "../tm4c123x-hal"
 
 [dependencies.menu]
 git = "https://github.com/thejpster/menu"
