Use cargo not xargo, and use new GPIO interface.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,9 @@ incremental = false
 [dependencies]
 
 [dependencies.tm4c123x-hal]
-# git = "https://github.com/thejpster/tm4c123x-hal"
-path = "../tm4c123x-hal"
+git = "https://github.com/thejpster/tm4c123x-hal"
+branch = "new_gpio_af"
+# path = "../tm4c123x-hal"
 
 [dependencies.menu]
 git = "https://github.com/thejpster/menu"
