--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ rust:
 install:
   - pushd /
   - rustup component add rust-src
-  - cargo install --force xargo
+  - rustup target add thumbv7em-none-eabihf
   - popd
   - curl https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-rm/6-2017q2/gcc-arm-none-eabi-6-2017-q2-update-linux.tar.bz2 | tar -C /home/travis -x -j
 before_script:
   - export PATH=$PATH:/home/travis/gcc-arm-none-eabi-6-2017-q2-update/bin
-script: xargo build --release
+script: cargo build --release
