--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,18 +9,8 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/thejpster/monotron"
 
 [profile.release]
-panic = "abort"
 lto = true
-codegen-units = 1
-incremental = false
-opt-level = "z"
-
-[profile.dev]
-panic = "abort"
-lto = true
-codegen-units = 1
-incremental = false
-# opt-level = "z"
+debug = true
 
 [dependencies]
 
@@ -31,19 +21,21 @@ branch = "new_gpio_af"
 
 [dependencies.menu]
 git = "https://github.com/thejpster/menu"
+# path = "../menu"
 
 [dependencies.vga-framebuffer]
 git = "https://github.com/thejpster/vga-framebuffer-rs"
+# path = "../vga-framebuffer-rs"
 
 [dependencies.embedded-hal]
 version = "0.1.1"
 features = ["unproven"]
 
 [dependencies.cortex-m]
-version = "0.3.0"
+version = "0.4.0"
 
 [dependencies.cortex-m-rt]
-version = "0.3.12"
+version = "0.3.15"
 features = ["abort-on-panic"]
 
 [dependencies.cortex-m-semihosting]
