--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ debug = true
 [dependencies]
 
 [dependencies.tm4c123x-hal]
-git = "https://github.com/thejpster/tm4c123x-hal"
+version = "0.3.0"
+features = ["rt"]
 # path = "../tm4c123x-hal"
 
 [dependencies.menu]
@@ -23,15 +24,15 @@ git = "https://github.com/thejpster/menu"
 # path = "../menu"
 
 [dependencies.vga-framebuffer]
-git = "https://github.com/thejpster/vga-framebuffer-rs"
-# path = "../vga-framebuffer-rs"
+# git = "https://github.com/thejpster/vga-framebuffer-rs"
+path = "../vga-framebuffer-rs"
 
 [dependencies.embedded-hal]
 version = "0.1.1"
 features = ["unproven"]
 
 [dependencies.cortex-m]
-version = "0.4.0"
+version = "0.4.3"
 
 [dependencies.cortex-m-rt]
 version = "0.3.15"
