--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,13 @@ features = ["rt"]
 # path = "../tm4c123x-hal"
 
 [dependencies.menu]
-git = "https://github.com/thejpster/menu"
+version = "0.1"
+# git = "https://github.com/thejpster/menu"
 # path = "../menu"
 
 [dependencies.vga-framebuffer]
-# git = "https://github.com/thejpster/vga-framebuffer-rs"
-path = "../vga-framebuffer-rs"
+git = "https://github.com/thejpster/vga-framebuffer-rs"
+# path = "../vga-framebuffer-rs"
 
 [dependencies.embedded-hal]
 version = "0.1.1"
