--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,4 +42,5 @@ features = ["abort-on-panic"]
 version = "0.2.0"
 
 [dependencies.pc-keyboard]
-path = "../pc-keyboard"
+git = "https://github.com/thejpster/pc-keyboard"
+# path = "../pc-keyboard"
