--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ debug = true
 [dependencies]
 
 [dependencies.tm4c123x-hal]
-version = "0.3.0"
+# version = "0.3.0"
 features = ["rt"]
-# path = "../tm4c123x-hal"
+path = "../tm4c123x-hal"
 
 [dependencies.menu]
 git = "https://github.com/thejpster/menu"
@@ -32,14 +32,16 @@ version = "0.1.1"
 features = ["unproven"]
 
 [dependencies.cortex-m]
-version = "0.4.3"
+version = "0.5"
 
 [dependencies.cortex-m-rt]
-version = "0.3.15"
-features = ["abort-on-panic"]
+version = "0.5"
+
+[dependencies.panic-semihosting]
+version = "0.2"
 
 [dependencies.cortex-m-semihosting]
-version = "0.2.0"
+version = "0.3"
 
 [dependencies.pc-keyboard]
 git = "https://github.com/thejpster/pc-keyboard"
