--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "monotron"
-version = "0.3.2"
+version = "0.4.0"
 authors = ["Jorge Aparicio <jorge@japaric.io>", "Jonathan 'theJPster' Pallant <monotron@thejpster.org.uk>"]
 description = "A simple 1980's home computer style application for the Stellaris Launchpad."
 keywords = ["arm", "cortex-m", "template", "video", "menu"]
@@ -21,12 +21,14 @@ features = ["rt"]
 path = "../tm4c123x-hal"
 
 [dependencies.menu]
+version = "0.1"
 # git = "https://github.com/thejpster/menu"
-path = "../menu"
+# path = "../menu"
 
 [dependencies.vga-framebuffer]
+version = "0.2"
 # git = "https://github.com/thejpster/vga-framebuffer-rs"
-path = "../vga-framebuffer-rs"
+# path = "../vga-framebuffer-rs"
 
 [dependencies.embedded-hal]
 version = "0.1.1"
