--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,6 @@ lto = true
 debug = true
 codegen-units = 1
 
-[dependencies]
-
 [dependencies.tm4c123x-hal]
 version = "0.4.0"
 features = ["rt"]
@@ -53,3 +51,7 @@ version = "0.3"
 
 [dependencies.pc-keyboard]
 version = "0.1.1"
+
+[dependencies.monotron-interface]
+# path = "../monotron-interface"
+git = "https://github.com/thejpster/monotron-interface"
