Switch to 2018 edition. Also moved demos menu to demo.rs. Also stoped 'alphabet' having matching fg/bg.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ keywords = ["arm", "cortex-m", "template", "video", "menu"]
 categories = ["embedded", "no-std"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/thejpster/monotron"
+edition = "2018"
 
 [[bin]]
 name = "monotron"
@@ -17,13 +18,15 @@ bench = false
 lto = true
 debug = true
 codegen-units = 1
+opt-level = "z"
 
 [dependencies.tm4c123x-hal]
-version = "0.4.0"
+version = "0.5.0"
+# path = "../tm4c123x-hal"
 features = ["rt"]
 
 [dependencies.menu]
-version = "0.1"
+version = "0.2.1"
 # git = "https://github.com/thejpster/menu"
 # path = "../menu"
 
@@ -38,16 +41,13 @@ version = "0.1.1"
 features = ["unproven"]
 
 [dependencies.cortex-m]
-version = "0.5"
+version = "0.5.7"
 
 [dependencies.cortex-m-rt]
-version = "0.5"
+version = "0.6.1"
 
-[dependencies.panic-semihosting]
-version = "0.3"
-
-[dependencies.cortex-m-semihosting]
-version = "0.3"
+[dependencies.panic-halt]
+version = "0.2"
 
 [dependencies.pc-keyboard]
 version = "0.1.1"
