Really rudimentary ACK on file load. Can now reliably load files (at least I get the same CRC every time).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,10 @@ version = "0.2"
 [dependencies.pc-keyboard]
 version = "0.1.1"
 
+[dependencies.crc]
+version = "1.8.1"
+default-features = false
+
 [dependencies.monotron-interface]
 # path = "../monotron-interface"
 git = "https://github.com/thejpster/monotron-interface"
