--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "monotron"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Jorge Aparicio <jorge@japaric.io>", "Jonathan 'theJPster' Pallant <monotron@thejpster.org.uk>"]
 description = "A simple 1980's home computer style application for the Tiva-C Launchpad."
 keywords = ["arm", "cortex-m", "template", "video", "menu"]
@@ -18,7 +18,7 @@ bench = false
 lto = true
 debug = true
 codegen-units = 1
-opt-level = "z"
+opt-level = "s"
 
 [dependencies.tm4c123x-hal]
 version = "0.5.0"
@@ -31,8 +31,8 @@ version = "0.2.1"
 # path = "../menu"
 
 [dependencies.vga-framebuffer]
-# version = "0.7.0"
-git = "https://github.com/thejpster/vga-framebuffer-rs"
+version = "0.7.2"
+# git = "https://github.com/thejpster/vga-framebuffer-rs"
 # path = "../vga-framebuffer-rs"
 features = ["const_fn"]
 
