--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "monotron"
-version = "0.7.0"
+version = "0.8.0"
 authors = ["Jorge Aparicio <jorge@japaric.io>", "Jonathan 'theJPster' Pallant <monotron@thejpster.org.uk>"]
 description = "A simple 1980's home computer style application for the Tiva-C Launchpad."
 keywords = ["arm", "cortex-m", "template", "video", "menu"]
@@ -21,9 +21,9 @@ codegen-units = 1
 opt-level = "s"
 
 [dependencies.tm4c123x-hal]
-# version = "0.7"
+version = "0.8"
 # path = "../tm4c-hal/tm4c123x-hal"
-git = "https://github.com/thejpster/tm4c-hal"
+# git = "https://github.com/thejpster/tm4c-hal"
 features = ["rt"]
 
 [dependencies.menu]
@@ -54,19 +54,17 @@ version = "0.2"
 version = "0.1.1"
 
 [dependencies.monotron-synth]
-# version = "0.1"
 # path = "../monotron-synth"
 # git = "https://github.com/thejpster/monotron-synth"
 version = "0.2"
 
 [dependencies.embedded-sdmmc]
-# version = "0.1"
+version = "0.1"
 # path = "../embedded-sdmmc-rs"
-git = "https://github.com/thejpster/embedded-sdmmc-rs"
+# git = "https://github.com/thejpster/embedded-sdmmc-rs"
 
 [dependencies.nb]
-# version = "0.1"
-version = "*"
+version = "0.1"
 
 [dependencies.crc]
 version = "1.8.1"
