--- a/avr_kb/meson.build
+++ b/avr_kb/meson.build
@@ -8,9 +8,15 @@
 
 project('io_controller', 'c', default_options : ['buildtype=minsize', 'b_lto=true', 'c_std=c11'])
 
+add_global_arguments('-DUART_RX0_BUFFER_SIZE=32', language : 'c')
+add_global_arguments('-DUART_TX0_BUFFER_SIZE=32', language : 'c')
+
 objcopy = find_program('avr-objcopy')
 
-elf = executable('image', 'src/main.c')
+third_party_inc = include_directories('third_party')
+
+
+elf = executable('image', 'src/main.c', 'third_party/avr-uart/uart.c', include_directories: third_party_inc)
 
 custom_target('image.hex',
   input : elf,
