--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,8 @@ version = "0.6.1"
 version = "0.2"
 
 [dependencies.pc-keyboard]
-version = "0.4.0"
+version = "0.4.1"
+# path = "../pc-keyboard"
 
 [dependencies.monotron-synth]
 # path = "../monotron-synth"
