--- a/.cargo/config
+++ b/.cargo/config
@@ -1,7 +1,7 @@
 [target.thumbv7em-none-eabihf]
 runner = 'gdb-multiarch'
 rustflags = [
-  "-C", "link-arg=-Tlink.x",
+  "-C", "link-arg=-Tlink_custom.x",
 ]
 [build]
 target = "thumbv7em-none-eabihf"
