Undo changes which move ISRs to RAM. The third interrupt with WFI is enough to stabilise the jitter, even in an application which runs a hard loop.

--- a/.cargo/config
+++ b/.cargo/config
@@ -1,7 +1,7 @@
 [target.thumbv7em-none-eabihf]
 runner = 'gdb-multiarch'
 rustflags = [
-  "-C", "link-arg=-Tmonotron_os.ld",
+  "-C", "link-arg=-Tlink.x",
 ]
 [build]
 target = "thumbv7em-none-eabihf"
