--- a/rom/Cargo.toml
+++ b/rom/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "monotron"
-version = "0.9.0"
+version = "0.9.1"
 authors = ["Jorge Aparicio <jorge@japaric.io>", "Jonathan 'theJPster' Pallant <monotron@thejpster.org.uk>"]
 description = "A simple 1980's home computer style application for the Tiva-C Launchpad."
 keywords = ["arm", "cortex-m", "template", "video", "menu"]
@@ -26,9 +26,9 @@ version = "0.2.1"
 # path = "../menu"
 
 [dependencies.vga-framebuffer]
-version = "0.7.4"
+version = "0.8.0"
 # git = "https://github.com/thejpster/vga-framebuffer-rs"
-# path = "../vga-framebuffer-rs"
+# path = "../../vga-framebuffer-rs"
 features = ["const_fn"]
 
 [dependencies.embedded-hal]
