Use the new API crate. Moves context into a static. This removes the need for the monotron-apps crate to maintain a static. It also allows us to implement println!

--- a/rom/Cargo.toml
+++ b/rom/Cargo.toml
@@ -14,16 +14,19 @@ name = "monotron"
 test = false
 bench = false
 
+[dependencies.monotron-api]
+path = "../monotron-api"
+
 [dependencies.tm4c123x-hal]
 version = "0.9.1"
-# path = "../tm4c-hal/tm4c123x-hal"
+# path = "../../tm4c-hal/tm4c123x-hal"
 # git = "https://github.com/thejpster/tm4c-hal"
 features = ["rt"]
 
 [dependencies.menu]
 version = "0.2.1"
 # git = "https://github.com/thejpster/menu"
-# path = "../menu"
+# path = "../../menu"
 
 [dependencies.vga-framebuffer]
 version = "0.8.1"
@@ -44,10 +47,10 @@ version = "0.2"
 
 [dependencies.pc-keyboard]
 version = "0.5"
-# path = "../pc-keyboard"
+# path = "../../pc-keyboard"
 
 [dependencies.monotron-synth]
-# path = "../monotron-synth"
+# path = "../../monotron-synth"
 # git = "https://github.com/thejpster/monotron-synth"
 version = "0.2"
 
@@ -56,7 +59,7 @@ path = "../monotron-io-protocol"
 
 [dependencies.embedded-sdmmc]
 version = "0.2"
-# path = "../embedded-sdmmc"
+# path = "../../embedded-sdmmc"
 # git = "https://github.com/thejpster/embedded-sdmmc-rs"
 
 [dependencies.nb]
@@ -66,3 +69,5 @@ version = "0.1"
 version = "1.8.1"
 default-features = false
 
+[dependencies.spin]
+version = "0.5"
