--- a/monotron-api/Cargo.toml
+++ b/monotron-api/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
 edition = "2018"
 description = "Defines the API between the Monotron ROM and Monotron applications running in RAM."
-license = "BlueOak-1.0.0"
+license-file = "LICENCE"
 
 [dependencies]
