--- a/rom/Cargo.toml
+++ b/rom/Cargo.toml
@@ -29,8 +29,10 @@ version = "0.3"
 # path = "../../menu"
 
 [dependencies.vga-framebuffer]
-version = "0.8.1"
+version = "0.9"
 features = ["const_fn"]
+git = "https://github.com/thejpster/vga-framebuffer-rs.git"
+# path = "../../vga-framebuffer-rs"
 
 [dependencies.embedded-hal]
 version = "0.2.1"
@@ -48,6 +50,11 @@ version = "0.2"
 [dependencies.pc-keyboard]
 version = "0.5"
 # path = "../../pc-keyboard"
+
+[dependencies.mcp794xx]
+# git = "https://github.com/thejpster/mcp794xx-rs"
+# branch = "jgp_changes"
+path = "../../mcp794xx-rs"
 
 [dependencies.monotron-synth]
 # path = "../../monotron-synth"
